--- a/src/main/resources/fxml/GameView.fxml
+++ b/src/main/resources/fxml/GameView.fxml
@@ -1,30 +1,49 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.SplitPane?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.FlowPane?>
-<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
 <BorderPane fx:id="board" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="0.0" minWidth="0" prefHeight="1080.0" prefWidth="1920.0" style="-fx-background-image: url('images/game.jpg');" stylesheets="@../css/gameview.css" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1">
-    <center>
-        <SplitPane dividerPositions="0.5" orientation="VERTICAL" prefHeight="200.0" prefWidth="160.0" style="-fx-background-image: url('images/game.jpg');" BorderPane.alignment="CENTER">
-            <items>
-                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
-                    <children>
-                        <HBox fx:id="playAreaTop" />
-                  <TextField layoutX="671.0" layoutY="177.0" onAction="#onCommandEntered" prefWidth="284.0" />
-                  <Label layoutX="547.0" layoutY="182.0" text="Enter a command:" />
-                    </children>
-                </AnchorPane>
-                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
-               <children>
-                  <FlowPane fx:id="setsArea" orientation="VERTICAL" />
-               </children>
-                </AnchorPane>
-            </items>
-        </SplitPane>
-    </center>
+   <center>
+      <GridPane style="-fx-background-color: #00FF0088;" BorderPane.alignment="CENTER">
+        <columnConstraints>
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="1722.3247680664062" minWidth="10.0" prefWidth="1406.9852294921875" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="936.0086059570312" minWidth="10.0" prefWidth="193.0147705078125" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints maxHeight="908.7151489257812" minHeight="10.0" prefHeight="908.7151489257812" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="528.806884765625" minHeight="10.0" prefHeight="151.28485107421875" vgrow="SOMETIMES" />
+        </rowConstraints>
+         <children>
+            <FlowPane fx:id="setsArea" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #0000FF88;" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
+               <GridPane.margin>
+                  <Insets />
+               </GridPane.margin>
+            </FlowPane>
+            <ImageView fx:id="deckImageView" fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="BOTTOM">
+               <GridPane.margin>
+                  <Insets />
+               </GridPane.margin>
+            </ImageView>
+            <Text fx:id="messageBox" fill="#6ba876" strokeType="OUTSIDE" strokeWidth="0.0" text="Message" GridPane.halignment="CENTER" GridPane.rowIndex="1">
+               <font>
+                  <Font name="System Bold" size="18.0" />
+               </font>
+            </Text>
+         </children>
+         <padding>
+            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+         </padding>
+         <BorderPane.margin>
+            <Insets />
+         </BorderPane.margin>
+      </GridPane>
+   </center>
 </BorderPane>
