--- a/src/main/resources/fxml/StartOptions.fxml
+++ b/src/main/resources/fxml/StartOptions.fxml
@@ -36,13 +36,16 @@
                               <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                               <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                               <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                            </rowConstraints>
                            <children>
                               <TextField fx:id="newGamePort" promptText="9876" text="9876" GridPane.columnIndex="1" />
                               <TextField fx:id="numOfPlayers" promptText="2" text="2" GridPane.columnIndex="1" GridPane.rowIndex="1" />
                               <Label text="Port :" />
                               <Label text="Number of players :" GridPane.rowIndex="1" />
-                              <Button mnemonicParsing="false" onAction="#onNewGame" prefHeight="27.0" prefWidth="125.0" text="Start server" GridPane.rowIndex="2" />
+                              <Button mnemonicParsing="false" onAction="#onNewGame" prefHeight="27.0" prefWidth="125.0" text="Start server" GridPane.rowIndex="3" />
+                              <Label text="User name:" GridPane.rowIndex="2" />
+                              <TextField fx:id="adminUserName" promptText="Your name" text="Admin User" GridPane.columnIndex="1" GridPane.rowIndex="2" />
                            </children>
                            <padding>
                               <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
@@ -77,7 +80,7 @@
                               <Label text="Port:" GridPane.rowIndex="1" />
                               <Button mnemonicParsing="false" onAction="#onJoinGame" prefHeight="27.0" prefWidth="125.0" text="Join" GridPane.halignment="CENTER" GridPane.rowIndex="3" />
                               <Label text="User name:" GridPane.rowIndex="2" />
-                              <TextField fx:id="userName" promptText="Your Name" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                              <TextField fx:id="userName" promptText="Your Name" text="Guest User" GridPane.columnIndex="1" GridPane.rowIndex="2" />
                            </children>
                            <padding>
                               <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
