--- a/src/main/resources/fxml/GameView.fxml
+++ b/src/main/resources/fxml/GameView.fxml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
@@ -12,31 +14,43 @@
 
 <BorderPane fx:id="board" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="0.0" minWidth="0" prefHeight="1080.0" prefWidth="1920.0" style="-fx-background-image: url('images/game.jpg');" stylesheets="@../css/gameview.css" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1">
    <center>
-      <GridPane BorderPane.alignment="CENTER">
+      <GridPane hgap="10.0" vgap="10.0" BorderPane.alignment="CENTER">
         <columnConstraints>
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="1722.3247680664062" minWidth="10.0" prefWidth="1406.9852294921875" />
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="936.0086059570312" minWidth="10.0" prefWidth="193.0147705078125" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="120.0" prefWidth="150.0" />
+            <ColumnConstraints maxWidth="1649.3063507080078" minWidth="10.4608154296875" prefWidth="1649.3063507080078" />
+            <ColumnConstraints minWidth="120.0" prefWidth="150.0" />
         </columnConstraints>
         <rowConstraints>
-          <RowConstraints maxHeight="908.7151489257812" minHeight="10.0" prefHeight="908.7151489257812" vgrow="SOMETIMES" />
-            <RowConstraints maxHeight="528.806884765625" minHeight="10.0" prefHeight="151.28485107421875" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="908.7151489257812" minHeight="10.0" prefHeight="884.9315185546875" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="150.0" prefHeight="150.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <FlowPane fx:id="setsArea" prefHeight="200.0" prefWidth="200.0" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
+            <FlowPane fx:id="setsArea" prefHeight="837.0" prefWidth="1903.0" GridPane.columnSpan="3" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
                <GridPane.margin>
                   <Insets />
                </GridPane.margin>
             </FlowPane>
-            <ImageView fx:id="deckImageView" fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="BOTTOM">
+            <Button fx:id="revertButton" mnemonicParsing="false" onAction="#onRevertClicked" text="Revert" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER">
                <GridPane.margin>
-                  <Insets />
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </GridPane.margin>
-            </ImageView>
-            <Text fx:id="messageBox" fill="#6ba876" strokeType="OUTSIDE" strokeWidth="0.0" text="Message" GridPane.halignment="CENTER" GridPane.rowIndex="1">
+            </Button>
+            <Text fx:id="messageBox" fill="#6ba876" strokeType="OUTSIDE" strokeWidth="0.0" text="Message" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1">
                <font>
                   <Font name="System Bold" size="18.0" />
                </font>
+               <GridPane.margin>
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+               </GridPane.margin>
             </Text>
+            <ImageView fx:id="deckImageView" fitHeight="140.0" fitWidth="120.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER">
+               <effect>
+                  <DropShadow offsetX="7.0" offsetY="7.0" spread="0.19" />
+               </effect>
+               <GridPane.margin>
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+               </GridPane.margin>
+            </ImageView>
          </children>
          <padding>
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
