Play area become scrollable. Improved game layout.

--- a/src/main/resources/css/gameview.css
+++ b/src/main/resources/css/gameview.css
@@ -8,3 +8,10 @@
 #setView{
     -fx-background-color: white;
 }
+
+#scrollArea{
+    -fx-background-color: transparent;
+}
+#scrollArea > .viewport {
+    -fx-background-color: transparent;
+}
