--- a/src/main/resources/fxml/StartOptions.fxml
+++ b/src/main/resources/fxml/StartOptions.fxml
@@ -12,13 +12,14 @@
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.text.Text?>
 
-<GridPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1">
+<GridPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.172-ea"
+          xmlns:fx="http://javafx.com/fxml/1">
     <columnConstraints>
-        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
     </columnConstraints>
     <rowConstraints>
-        <RowConstraints maxHeight="397.0" minHeight="10.0" prefHeight="330.0" vgrow="SOMETIMES" />
-        <RowConstraints maxHeight="196.0" minHeight="3.0" prefHeight="70.0" vgrow="SOMETIMES" />
+        <RowConstraints maxHeight="397.0" minHeight="10.0" prefHeight="330.0" vgrow="SOMETIMES"/>
+        <RowConstraints maxHeight="196.0" minHeight="3.0" prefHeight="70.0" vgrow="SOMETIMES"/>
     </rowConstraints>
     <children>
         <TabPane prefHeight="331.0" prefWidth="600.0" tabClosingPolicy="UNAVAILABLE" GridPane.valignment="TOP">
@@ -29,31 +30,35 @@
                             <children>
                                 <GridPane hgap="5.0" maxHeight="-Infinity" maxWidth="800.0" vgap="5.0">
                                     <columnConstraints>
-                                        <ColumnConstraints hgrow="SOMETIMES" minWidth="100.0" />
-                                        <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" prefWidth="390.0" />
+                                        <ColumnConstraints hgrow="SOMETIMES" minWidth="100.0"/>
+                                        <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" prefWidth="390.0"/>
                                     </columnConstraints>
                                     <rowConstraints>
-                                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
                                     </rowConstraints>
                                     <children>
-                                        <TextField fx:id="newGamePort" promptText="9876" text="9876" GridPane.columnIndex="1" />
-                                        <TextField fx:id="numOfPlayers" promptText="2" text="2" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                                        <Label text="Port :" />
-                                        <Label text="Number of players :" GridPane.rowIndex="1" />
-                                        <Button mnemonicParsing="false" onAction="#onNewGame" prefHeight="27.0" prefWidth="125.0" text="Start server" GridPane.rowIndex="3" />
-                                        <Label text="User name:" GridPane.rowIndex="2" />
-                                        <TextField fx:id="adminUserName" promptText="Your name" text="Admin User" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                                        <TextField fx:id="newGamePort" promptText="9876" text="9876"
+                                                   GridPane.columnIndex="1"/>
+                                        <TextField fx:id="numOfPlayers" promptText="2" text="2" GridPane.columnIndex="1"
+                                                   GridPane.rowIndex="1"/>
+                                        <Label text="Port :"/>
+                                        <Label text="Number of players :" GridPane.rowIndex="1"/>
+                                        <Button mnemonicParsing="false" onAction="#onNewGame" prefHeight="27.0"
+                                                prefWidth="125.0" text="Start server" GridPane.rowIndex="3"/>
+                                        <Label text="User name:" GridPane.rowIndex="2"/>
+                                        <TextField fx:id="adminUserName" promptText="Your name" text="Admin User"
+                                                   GridPane.columnIndex="1" GridPane.rowIndex="2"/>
                                     </children>
                                     <padding>
-                                        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+                                        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
                                     </padding>
                                 </GridPane>
                             </children>
                             <padding>
-                                <Insets top="20.0" />
+                                <Insets top="20.0"/>
                             </padding>
                         </StackPane>
                     </content>
@@ -64,37 +69,43 @@
                             <children>
                                 <GridPane hgap="5.0" maxHeight="-Infinity" maxWidth="800.0" vgap="5.0">
                                     <columnConstraints>
-                                        <ColumnConstraints hgrow="SOMETIMES" minWidth="100.0" />
-                                        <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" prefWidth="390.0" />
+                                        <ColumnConstraints hgrow="SOMETIMES" minWidth="100.0"/>
+                                        <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" prefWidth="390.0"/>
                                     </columnConstraints>
                                     <rowConstraints>
-                                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
                                     </rowConstraints>
                                     <children>
-                                        <TextField fx:id="joinIp" promptText="127.0.0.1" text="127.0.0.1" GridPane.columnIndex="1" />
-                                        <TextField fx:id="joinPort" promptText="9876" text="9876" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                                        <Label text="Ip:" />
-                                        <Label text="Port:" GridPane.rowIndex="1" />
-                                        <Button mnemonicParsing="false" onAction="#onJoinGame" prefHeight="27.0" prefWidth="125.0" text="Join" GridPane.halignment="CENTER" GridPane.rowIndex="3" />
-                                        <Label text="User name:" GridPane.rowIndex="2" />
-                                        <TextField fx:id="userName" promptText="Your Name" text="Guest User" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                                        <TextField fx:id="joinIp" promptText="127.0.0.1" text="127.0.0.1"
+                                                   GridPane.columnIndex="1"/>
+                                        <TextField fx:id="joinPort" promptText="9876" text="9876"
+                                                   GridPane.columnIndex="1" GridPane.rowIndex="1"/>
+                                        <Label text="Ip:"/>
+                                        <Label text="Port:" GridPane.rowIndex="1"/>
+                                        <Button mnemonicParsing="false" onAction="#onJoinGame" prefHeight="27.0"
+                                                prefWidth="125.0" text="Join" GridPane.halignment="CENTER"
+                                                GridPane.rowIndex="3"/>
+                                        <Label text="User name:" GridPane.rowIndex="2"/>
+                                        <TextField fx:id="userName" promptText="Your Name" text="Guest User"
+                                                   GridPane.columnIndex="1" GridPane.rowIndex="2"/>
                                     </children>
                                     <padding>
-                                        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+                                        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
                                     </padding>
                                 </GridPane>
                             </children>
                             <padding>
-                                <Insets top="20.0" />
+                                <Insets top="20.0"/>
                             </padding>
                         </StackPane>
                     </content>
                 </Tab>
             </tabs>
         </TabPane>
-        <Text fx:id="messageText" strokeType="OUTSIDE" strokeWidth="0.0" text="Waiting for other players to join!" GridPane.halignment="CENTER" GridPane.rowIndex="1" />
+        <Text fx:id="messageText" strokeType="OUTSIDE" strokeWidth="0.0" text="Waiting for other players to join!"
+              GridPane.halignment="CENTER" GridPane.rowIndex="1"/>
     </children>
 </GridPane>
