--- a/src/main/resources/fxml/GameView.fxml
+++ b/src/main/resources/fxml/GameView.fxml
@@ -23,8 +23,8 @@
     <center>
         <GridPane hgap="1.0" vgap="1.0" BorderPane.alignment="CENTER">
             <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="173.0" minWidth="120.0" prefWidth="162.0" />
-                <ColumnConstraints maxWidth="1649.3063507080078" minWidth="10.4608154296875" prefWidth="1607.0" />
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="120.0" prefWidth="150.0" />
+                <ColumnConstraints maxWidth="1649.3063507080078" minWidth="10.4608154296875" prefWidth="1649.3063507080078" />
                 <ColumnConstraints minWidth="120.0" prefWidth="150.0" />
             </columnConstraints>
             <rowConstraints>
@@ -47,14 +47,9 @@
                         <Insets />
                     </opaqueInsets>
                 </ScrollPane>
-                <Button fx:id="revertButton" mnemonicParsing="false" onAction="#onRevertClicked" text="Revert" GridPane.halignment="LEFT" GridPane.rowIndex="1" GridPane.valignment="CENTER">
+                <Button fx:id="revertButton" mnemonicParsing="false" onAction="#onRevertClicked" text="Revert" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER">
                     <GridPane.margin>
-                        <Insets bottom="10.0" left="5.0" right="10.0" top="10.0" />
-                    </GridPane.margin>
-                </Button>
-                <Button fx:id="endTurnButton" mnemonicParsing="false" text="End Turn" GridPane.halignment="RIGHT" GridPane.rowIndex="1" GridPane.valignment="CENTER">
-                    <GridPane.margin>
-                        <Insets bottom="10.0" left="75.0" right="10.0" top="10.0" />
+                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                     </GridPane.margin>
                 </Button>
                 <Text fx:id="messageBox" fill="#6ba876" strokeType="OUTSIDE" strokeWidth="0.0" text="Message" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1">
