Fixes: 1. Screen resizing adaptability 2. Revert functionality fixed so it works sequentially 3. number of jokers reduced to 2 4. Deck clicking fixed 5. Card set issue

--- a/src/main/resources/fxml/GameView.fxml
+++ b/src/main/resources/fxml/GameView.fxml
@@ -19,90 +19,103 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane fx:id="board" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="0.0" minWidth="0" prefHeight="1080.0" prefWidth="1920.0" style="-fx-background-image: url('images/game.jpg');" stylesheets="@../css/gameview.css" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane fx:id="board" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="0.0" minWidth="0" prefHeight="1080.0"
+            prefWidth="1920.0" style="-fx-background-image: url('images/game.jpg');" stylesheets="@../css/gameview.css"
+            xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1">
     <center>
         <GridPane hgap="1.0" vgap="1.0" BorderPane.alignment="CENTER">
             <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="120.0" prefWidth="150.0" />
-                <ColumnConstraints maxWidth="1649.3063507080078" minWidth="10.4608154296875" prefWidth="1649.3063507080078" />
-                <ColumnConstraints minWidth="120.0" prefWidth="150.0" />
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="120.0" prefWidth="150.0"/>
+                <ColumnConstraints maxWidth="1649.3063507080078" minWidth="10.4608154296875"
+                                   prefWidth="1649.3063507080078"/>
+                <ColumnConstraints minWidth="120.0" prefWidth="150.0"/>
             </columnConstraints>
             <rowConstraints>
-                <RowConstraints maxHeight="908.7151489257812" minHeight="10.0" prefHeight="884.9315185546875" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="100.0" prefHeight="100.0" vgrow="SOMETIMES" />
+                <RowConstraints maxHeight="908.7151489257812" minHeight="10.0" prefHeight="884.9315185546875"
+                                vgrow="SOMETIMES"/>
+                <RowConstraints minHeight="100.0" prefHeight="100.0" vgrow="SOMETIMES"/>
             </rowConstraints>
             <children>
-                <ScrollPane id="scrollArea" fx:id="scrollArea" fitToHeight="true" fitToWidth="true" hbarPolicy="NEVER" pannable="true" prefHeight="1500.0" prefWidth="2000.0" vbarPolicy="NEVER" GridPane.columnSpan="3" GridPane.vgrow="ALWAYS">
+                <ScrollPane id="scrollArea" fx:id="scrollArea" fitToHeight="true" fitToWidth="true" hbarPolicy="NEVER"
+                            pannable="true" prefHeight="1500.0" prefWidth="2000.0" vbarPolicy="NEVER"
+                            GridPane.columnSpan="3" GridPane.vgrow="ALWAYS">
                     <content>
                         <FlowPane fx:id="setsArea" prefWidth="1898.0" style="-fx-background-color: transparent;">
                             <padding>
-                                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
                             </padding>
                         </FlowPane>
                     </content>
                     <GridPane.margin>
-                        <Insets />
+                        <Insets/>
                     </GridPane.margin>
                     <opaqueInsets>
-                        <Insets />
+                        <Insets/>
                     </opaqueInsets>
                 </ScrollPane>
-                <Button fx:id="revertButton" mnemonicParsing="false" onAction="#onRevertClicked" text="Revert" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER">
+                <Button fx:id="revertButton" mnemonicParsing="false" onAction="#onRevertClicked" text="Revert"
+                        GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER">
                     <GridPane.margin>
-                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
                     </GridPane.margin>
                 </Button>
-                <Text fx:id="messageBox" fill="#6ba876" strokeType="OUTSIDE" strokeWidth="0.0" text="Message" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1">
+                <Text fx:id="messageBox" fill="#6ba876" strokeType="OUTSIDE" strokeWidth="0.0" text="Message"
+                      GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1">
                     <font>
-                        <Font name="System Bold" size="18.0" />
+                        <Font name="System Bold" size="18.0"/>
                     </font>
                     <GridPane.margin>
-                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
                     </GridPane.margin>
                 </Text>
-                <ImageView fx:id="deckImageView" fitHeight="100.0" fitWidth="80.0" pickOnBounds="true" preserveRatio="true" x="23.0" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER">
+                <ImageView fx:id="deckImageView" fitHeight="100.0" fitWidth="80.0" pickOnBounds="true"
+                           preserveRatio="true" x="23.0" GridPane.columnIndex="2" GridPane.halignment="CENTER"
+                           GridPane.rowIndex="1" GridPane.valignment="CENTER">
                     <effect>
-                        <DropShadow offsetX="7.0" offsetY="7.0" spread="0.19" />
+                        <DropShadow offsetX="7.0" offsetY="7.0" spread="0.19"/>
                     </effect>
                     <GridPane.margin>
-                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
                     </GridPane.margin>
                 </ImageView>
             </children>
             <BorderPane.margin>
-                <Insets />
+                <Insets/>
             </BorderPane.margin>
             <padding>
-                <Insets bottom="1.0" left="1.0" right="1.0" top="1.0" />
+                <Insets bottom="1.0" left="1.0" right="1.0" top="1.0"/>
             </padding>
         </GridPane>
     </center>
     <bottom>
-        <Pane prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #00FF0055;" BorderPane.alignment="CENTER" />
+        <Pane prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #00FF0055;"
+              BorderPane.alignment="CENTER"/>
     </bottom>
     <top>
         <Group BorderPane.alignment="CENTER">
             <children>
-                <VBox alignment="TOP_CENTER" prefHeight="50.0" prefWidth="1775.0" style="-fx-background-color: #00FF0055;">
+                <VBox alignment="TOP_CENTER" prefHeight="50.0" prefWidth="1775.0"
+                      style="-fx-background-color: #00FF0055;">
                     <children>
-                        <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" scaleX="0.5" scaleY="0.5" style="-fx-background-color: #0000FF33;" translateY="35.0">
+                        <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" scaleX="0.5" scaleY="0.5"
+                              style="-fx-background-color: #0000FF33;" translateY="35.0">
                             <children>
                                 <ImageView fitHeight="140.0" fitWidth="120.0" pickOnBounds="true" preserveRatio="true">
                                     <image>
-                                        <Image url="@../images/1D.png" />
+                                        <Image url="@../images/1D.png"/>
                                     </image>
                                     <viewport>
-                                        <Rectangle2D />
+                                        <Rectangle2D/>
                                     </viewport>
                                 </ImageView>
                             </children>
                         </HBox>
-                        <Button mnemonicParsing="false" text="Button" />
+                        <Button mnemonicParsing="false" text="Button"/>
                     </children>
                 </VBox>
             </children>
             <BorderPane.margin>
-                <Insets top="-105.0" />
+                <Insets top="-105.0"/>
             </BorderPane.margin>
         </Group>
     </top>
